# sift

./: .gitignore  Dockerfile  LICENSE  Makefile  OPENCODE_NOTES.md  README.md  architecture-principles.md  code-review.md  deferred-features.md  deferred-tauri-native-apps.md  dir-file-filters-interaction.md  disambiguating-extra-copies.md  docker-compose.yml  duplicate-semantics.md  file-list-view.md  frontend-regression-checklist.md  improvement-plan.md  legacy-files-ls-migration-plan.md  opencode-todo-next.md  performance-scale-implementation-plan.md  potential-tree-dir-matching-polish.md  prompts  pyproject.toml  pytest.ini  regression-fix.md  requirements-dev.txt  requirements-server.txt  search-interaction-contract.md  sets.md  sift-report.md  tips.md  tree-view-zoom.md  virtual-host-management.md
.github/workflows/: build-windows.yml
archive-completed/: drive-handling-improvement.md
frontend/: host-aware-dup-filter.md  index.html  package-lock.json  package.json  playwright.config.cjs  tailwind.config.js  vite.config.js
frontend/e2e/: dup-filter.spec.cjs  filter-composition.spec.cjs  hash-search.spec.cjs  helpers.cjs  hidden-hosts.spec.cjs  mode-switch.spec.cjs  reset.spec.cjs  smoke.spec.cjs  tree-host-scope-rerender.spec.cjs
frontend/src/: App.jsx  api.js  index.css  utils.js  utils.test.js
scripts/: migrate_drive.py  run_integration_with_timeouts.py
server/: db.py  main.py  models.py
sift/: __main__.py  classify.py  client.py  config.py  exclusions.py  hash_utils.py  main.py  normalize.py
sift/commands/: __init__.py  comm.py  (+16 more)
unraid/: sift.xml
(+56 files in other folders)
