[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.3.3"
description = "Distributed file inventory and deduplication system"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sift = "sift.main:main"

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
    "duckdb",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sift*", "server*"]
